added static/ folder to gitignore; added typescript to package.json added idea for folder structure (having a src/ folder etc)

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "popper": "^1.0.1",
     "popper.js": "^1.15.0",
     "webpack": "^4.40.2",
-    "webpack-cli": "^3.3.9"
+    "webpack-cli": "^3.3.9",
+    "typescript": "^3.6.3"
   },
   "devDependencies": {
     "@types/bootstrap": "^4.3.1"
