--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,10 @@
 	"compilerOptions": {
 		"target": "es5",
 		"module": "commonjs",
-		"sourceMap": true
+		"sourceMap": true,
+		"outDir": "frontend/scripts"
 	},
-	"exclude": [
-		"templates",
-		"migrations",
-		"node_modules"
+	"include": [
+		"src/frontend/scripts"
 	]
 }
