--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
     "webpack": "^4.40.2",
     "webpack-cli": "^3.3.9",
     "typescript": "^3.6.3",
-    "node-sass": "^4.12.0"
+    "node-sass": "^4.12.0",
+    "commonjs": "^0.0.1",
+    "ts-loader": "^6.1.2",
+    "sass-loader": "^8.0.0",
+    "css-loader": "^3.2.0",
+    "style-loader": "^1.0.0",
+    "glob": "latest"
   },
   "devDependencies": {
     "@types/bootstrap": "^4.3.1"
@@ -24,7 +30,8 @@
     "watchtsc": "tsc -w",
     "tsc" : "tsc",
     "scss": "node-sass src/frontend/sass -o frontend/css",
-    "watchscss": "node-sass --watch src/frontend/sass -o frontend/css"
+    "watchscss": "node-sass --watch src/frontend/sass -o frontend/css",
+    "webpack": "webpack"
   },
   "repository": {
     "type": "git",
