--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
 	"compilerOptions": {
 		"target": "es5",
 		"module": "commonjs",
-		"sourceMap": false,
+		"sourceMap": true, // TODO disable in production
 		"outDir": "frontend/scripts"
 	},
 	"include": [
