--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "sass-loader": "^8.0.0",
     "css-loader": "^3.2.0",
     "style-loader": "^1.0.0",
-    "glob": "latest"
+    "glob": "latest",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0"
   },
   "devDependencies": {
     "@types/bootstrap": "^4.3.1"
