--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "sass-loader": "^8.0.0",
     "css-loader": "^3.2.0",
     "style-loader": "^1.0.0",
-    "glob": "latest",
+    "glob": "^7.1.4",
     "extract-text-webpack-plugin": "^4.0.0-beta.0"
   },
   "devDependencies": {
