--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node-sass": "^4.12.0",
     "commonjs": "^0.0.1",
     "ts-loader": "^6.1.2",
+    "sass": "^1.22.12",
     "sass-loader": "^8.0.0",
     "css-loader": "^3.2.0",
     "style-loader": "^1.0.0",
