--- a/db_uwsgi.ini
+++ b/db_uwsgi.ini
@@ -22,3 +22,6 @@ socket          = /var/www/db/db/site.sock
 chmod-socket    = 666
 # clear environment on exit
 vacuum          = true
+
+env = DJANGO_SETTINGS_MODULE=designproject.settings
+deamonize = /var/log/uwsgi/designproject.log
