--- a/package.json
+++ b/package.json
@@ -4,27 +4,29 @@
   "description": "description WIP",
   "main": "index.js",
   "dependencies": {
+    "@types/bootstrap": "^4.3.1",
+    "@types/bootstrap-select": "^1.11.1",
+    "@types/jquery": "^3.3.31",
+    "@types/popper.js": "^1.11.0",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "bootstrap-select": "^1.13.11",
+    "commonjs": "^0.0.1",
+    "css-loader": "^3.2.0",
+    "fibers": "^4.0.1",
+    "glob": "^7.1.4",
     "jquery": "^3.4.1",
+    "mini-css-extract-plugin": "^0.8.0",
+    "node-sass": "^4.12.0",
     "popper": "^1.0.1",
     "popper.js": "^1.15.0",
-    "webpack": "^4.40.2",
-    "webpack-cli": "^3.3.9",
-    "typescript": "^3.6.3",
-    "fibers": "^4.0.1",
     "sass": "^1.22.12",
-    "node-sass": "^4.12.0",
-    "commonjs": "^0.0.1",
-    "ts-loader": "^6.1.2",
     "sass-loader": "^8.0.0",
-    "css-loader": "^3.2.0",
     "style-loader": "^1.0.0",
-    "glob": "^7.1.4"
-  },
-  "devDependencies": {
-    "@types/bootstrap": "^4.3.1",
-    "mini-css-extract-plugin": "^0.8.0"
+    "ts-loader": "^6.1.2",
+    "typescript": "^3.6.3",
+    "webpack": "^4.40.2",
+    "webpack-cli": "^3.3.9"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
