--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/bootstrap-select": "^1.11.1",
     "@types/jquery": "^3.3.31",
     "@types/popper.js": "^1.11.0",
+    "@types/node": "^10.0.3",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "bootstrap-select": "^1.13.11",
@@ -38,7 +39,14 @@
     "watchscss": "node-sass --watch src/frontend/sass -o frontend/css",
     "build": "webpack --mode=development",
     "watch": "webpack --watch --mode=development",
-    "production": "webpack --mode=production"
+    "production": "webpack --mode=production",
+    "check": "gts check",
+    "clean": "gts clean",
+    "compile": "tsc -p .",
+    "fix": "gts fix",
+    "prepare": "npm run compile",
+    "pretest": "npm run compile",
+    "posttest": "npm run check"
   },
   "repository": {
     "type": "git",
