--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "@types/bootstrap": "^4.3.1",
     "@types/bootstrap-select": "^1.11.1",
     "@types/jquery": "^3.3.31",
-    "@types/popper.js": "^1.11.0",
     "@types/node": "^10.0.3",
+    "@types/popper.js": "^1.11.0",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "bootstrap-cookie-alert": "^1.1.1",
     "bootstrap-select": "^1.13.11",
     "commonjs": "^0.0.1",
     "css-loader": "^3.2.0",
