Erorr handling is now even better

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
       "dom",
       "es5",
       "scripthost",
-      "es2015.promise"
+      "es2015.promise",
+      "esnext"
     ]
   },
   "include": [
