--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "sass": "^1.22.12",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
+    "sweetalert2": "^8.18.3",
     "ts-loader": "^6.1.2",
     "typescript": "^3.6.3",
     "webpack": "^4.40.2",
