--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "datatables.responsive.typings": "^1.0.3",
     "fibers": "^4.0.1",
     "glob": "^7.1.4",
+    "gts": "^1.1.0",
     "jquery": "^3.4.1",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
@@ -29,6 +30,7 @@
     "style-loader": "^1.0.0",
     "sweetalert2": "^8.18.3",
     "ts-loader": "^6.1.2",
+    "tslint": "^5.20.0",
     "typescript": "^3.6.3",
     "webpack": "^4.40.2",
     "webpack-cli": "^3.3.9"
