--- a/.gitignore
+++ b/.gitignore
@@ -377,9 +377,10 @@ node_modules/**/*
 ./node_modules
 node_modules/**/*.*
 *.map
-designproject/secret.py
+src/designproject/secret.py
 package-lock.json
 uwsgi.ini
+db_uwsgi.ini
 static/admin
 static/admin/*
 static/admin/**/*
