--- a/src/django_settings/secret.py.example
+++ b/src/django_settings/secret.py.example
@@ -5,3 +5,14 @@ db_host = 'example.com'
 db_port = '5432'
 
 bitmask = 'PLEASE FILL IN'
+
+# For display to users only; please edit
+DATABASE_SERVER = 'thebias.nl'
+HOST_SERVER = 'db.thebias.nl'
+
+# EMAIL SETTINGS: (please edit)
+EMAIL_SERVER = 'localhost'
+EMAIL_SENDER = 'no-reply@thebias.nl'
+
+# LOGFILE: needs write permissions
+LOGFILE = '/tmp/backend.log'
