improved webpack config to do basic tree shaking

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "allowUnusedLabels": false,
     "declaration": false,
     "forceConsistentCasingInFileNames": true,
-    "module": "commonjs",
+    "module": "esnext",
     "noEmitOnError": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitReturns": true,
@@ -12,7 +12,10 @@
     "sourceMap": true,
     "strict": true,
     "target": "es5",
+    "moduleResolution": "node",
     "outDir": "frontend/scripts",
+    "importHelpers": true,
+    "removeComments": false,
     "lib": [
       "dom",
       "es5",
