--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "tslint": "^5.20.0",
     "typescript": "^3.6.3",
     "webpack": "^4.40.2",
-    "webpack-cli": "^3.3.9"
+    "webpack-cli": "^3.3.9",
+    "es6-promise": "latest",
+    "lodash": "latest"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -59,5 +61,8 @@
     "url": "https://git.thebias.nl/floris/design.git"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/lodash": "^4.14.144"
+  }
 }
