--- a/package.json
+++ b/package.json
@@ -4,11 +4,20 @@
   "description": "description WIP",
   "main": "index.js",
   "dependencies": {
+    "@babel/core": "^7.6.4",
+    "@babel/preset-env": "^7.6.3",
     "@types/bootstrap": "^4.3.1",
     "@types/bootstrap-select": "^1.11.1",
     "@types/jquery": "^3.3.31",
     "@types/node": "^10.0.3",
+    "awesome-typescript-loader": "^5.2.1",
     "axios": "^0.19.0",
+    "babel": "^6.23.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-preset-env": "^1.7.0",
     "bootstrap": "^4.3.1",
     "bootstrap-cookie-alert": "^1.1.1",
     "bootstrap-select": "^1.13.11",
@@ -21,6 +30,7 @@
     "glob": "^7.1.4",
     "gts": "^1.1.0",
     "jquery": "^3.4.1",
+    "lodash": "^4.17.15",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
     "popper": "^1.0.1",
@@ -33,9 +43,7 @@
     "tslint": "^5.20.0",
     "typescript": "^3.6.3",
     "webpack": "^4.40.2",
-    "webpack-cli": "^3.3.9",
-    "es6-promise": "latest",
-    "lodash": "latest"
+    "webpack-cli": "^3.3.9"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
