removed frontend from git; fixed chunk splitting almost

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "pretty": true,
     "sourceMap": true,
     "strict": true,
-    "target": "esnext",
+    "target": "es5",
     "moduleResolution": "node",
     "outDir": "frontend/scripts",
     "importHelpers": true,
