added debug to secret.py; fixed the path to the static directory

--- a/src/django_settings/secret.py.example
+++ b/src/django_settings/secret.py.example
@@ -6,6 +6,9 @@ db_port = '5432'
 
 bitmask = 'PLEASE FILL IN'
 
+# Leave this to false if you are not doing development
+DEBUG = False
+
 # For display to users only; please edit
 DATABASE_SERVER = 'thebias.nl'
 HOST_SERVER = 'db.thebias.nl'
