--- a/src/django_settings/secret.py.example
+++ b/src/django_settings/secret.py.example
@@ -19,3 +19,6 @@ EMAIL_SENDER = 'no-reply@thebias.nl'
 
 # LOGFILE: needs write permissions
 LOGFILE = '/tmp/backend.log'
+
+# DEBUG: Set to False in production!
+DEBUG = False
