--- a/dab.service
+++ b/dab.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Database Administration Bundle
-Requires=Network.target
-After=Network.target
+Requires=network.target
+After=network.target
 
 [Service]
 ExecStart=uwsgi --ini [DOCUMENT ROOT]/uwsgi.ini --uid www-data --gid www-data
