--- a/src/django_settings/secret.py.example
+++ b/src/django_settings/secret.py.example
@@ -9,9 +9,13 @@ bitmask = 'PLEASE FILL IN'
 # Leave this to false if you are not doing development
 DEBUG = False
 
+# If hosting the DAB under yourhostname.com/xyz/ for example, enter "xyz/" here. No slashes at the front. Leave empty
+# if you do not want to have a prefix.
+URL_PREFIX = "dab/"
+
 # For display to users only; please edit
 DATABASE_SERVER = 'thebias.nl'
-HOST_SERVER = 'db.thebias.nl'
+HOST_SERVER = 'db.thebias.nl' #This should contain the URL_PREFIX in it. So, for example: yourhostname.com/xyz (no trailing slash).
 
 # EMAIL SETTINGS: (please edit)
 EMAIL_SERVER = 'localhost'
