--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "sweetalert2": "^8.18.3",
     "ts-loader": "^6.1.2",
     "tslint": "^5.20.0",
+    "typedoc": "^0.15.0",
     "typescript": "^3.6.3",
     "webpack": "^4.40.2",
     "webpack-cli": "^3.3.9"
