--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "fix": "gts fix",
     "prepare": "npm run compile",
     "pretest": "npm run compile",
-    "posttest": "npm run check"
+    "posttest": "npm run check",
+    "typedoc": "typedoc --out docs/frontend src/frontend"
   },
   "repository": {
     "type": "git",
